Se agrego cosas a SO y a Estadística, mas la corrección de algunas otras cosas

--- a/Metodología de Sistemas I/Unidad 3/1. Requerimientos.md
+++ b/Metodología de Sistemas I/Unidad 3/1. Requerimientos.md
@@ -10,9 +10,9 @@ Los requerimientos de un sistema son descripciones de las necesidades de los cli
 Se denomina ***ingeniería de requerimientos*** al proceso de describir, analizar, documentar y verificar los servicios y requerimiento.
 Existen dos niveles de descripción de requerimientos:
 
-- **Requerimientos del usuario**: Definen qué servicios esperan los usuarios del sistema y las restricciones con las cuales éste debe operar.
-- **Requerimientos del sistema**: Son descripciones más detalladas de las funciones, los servicios y las restricciones operacionales del sistema de software. Estos se dividen en:
-	- **Funcionales**: Definen las funciones que el sistema debe proveer, cómo debería reaccionar el sistema a entradas particulares, cómo debería comportarse el sistema en situaciones específicas y En algunos casos, también explican lo que no debería hacer el sistema, entre otras cosas:
+- **Requerimientos del usuario**: Definen qué servicios esperan los usuarios del sistema y las restricciones con las cuales este debe operar. La descripción de estos es más general y se suelen representar mediante ***diagramas de proceso de uso***
+- **Requerimientos del sistema**: Son descripciones más detalladas de las funciones, los servicios y las restricciones operacionales del sistema de software, suelen representarse mediante ***diagramas de caso de uso***. Estos se dividen en:
+	- **Funcionales**: Definen las funciones que el sistema debe proveer, cómo debería reaccionar el sistema a entradas particulares, cómo debería comportarse el sistema en situaciones específicas y En algunos casos, también explican lo que no debería hacer el sistema, entre otras cosas.
 	- **No Funcionales**: Son limitaciones sobre servicios o funciones que ofrece el sistema, están relacionados con propiedades emergentes del sistema, como por ejemplo fiabilidad, tiempo de respuesta y uso de almacenamiento. Estas Se suelen aplicar al sistema como un todo, más que a características o a servicios individuales del sistema. Al mismo tiempo, existen diferentes tipos de requerimientos no funcionales, los cuales se pueden agrupar en las siguientes categorías
 		- De producto.
 		- A la Organización.
