--- a/Metodología de Sistemas I/Unidad 3/2. Proceso de Ingeniería de Requerimientos.md
+++ b/Metodología de Sistemas I/Unidad 3/2. Proceso de Ingeniería de Requerimientos.md
@@ -14,7 +14,7 @@ Todo este proceso se realiza con el único fin de que al terminar este mismo se 
 >[!info] Nota
 >También suele nombrarse como ***especificación de requerimientos de software***.
 
-Para realizar estos documentos existe un estándar escrito por el IEEE en el cual se especifica la estructura base con la que debe contar este, obviamente no es obligatorio usar esta estructura por completo, ya que de acuerdo al tipo de proyecto que se desee llevar a cabo el documento poseerá una u otra sección.
+Para realizar estos documentos existe un estándar escrito por el IEEE en el cual se especifica la estructura base con la que debe contar este informe, obviamente no es obligatorio usar esta estructura por completo, ya que de acuerdo al tipo de proyecto que se desee llevar a cabo el documento poseerá una u otra sección.
 
 #### Técnicas para la Adquisición de Requerimientos
 
@@ -26,7 +26,7 @@ La adquisición de los requerimientos del cliente puede darse mediante distintos
 - **Entrevistas**: Es una conversación dirigida con un propósito específico, en la cual se usa un formato de preguntas y respuestas, de las cuales se busca obtener opiniones, sentimientos, objetivos de la organización, objetivos personales, procedimientos informales.
 
 >[!important] Planeación de la Entrevista
->Al ser un procedimiento que demanda tiempo de las dos o más partes involucradas, todo debe tener una preparación previa por parte del equipo encargado de los requerimientos, por se recomienda:
+>Al ser un procedimiento que demanda tiempo de las dos o más partes involucradas, todo debe tener una preparación previa por parte del equipo encargado de los requerimientos, por eso se recomienda:
 >1.  Leer el material sobre los antecedentes.
 >2. Establecer los objetivos de la entrevista.
 >3. Decidir a quién entrevistar.
@@ -36,8 +36,8 @@ La adquisición de los requerimientos del cliente puede darse mediante distintos
 > #### Tipos de preguntas
 > Ya que la base de toda entrevista son las preguntas, lo más recomendable sería que estas sean estructuradas de manera correcta para obtener la mayor y mejor cantidad de respuestas.
 > 
-> - Las preguntas abiertas ofrecen opciones abiertas para que el entrevistado responda.
-> - Las preguntas cerradas ofrecen un número limitado de opciones para responder.
+> - Las ***preguntas abiertas*** ofrecen opciones abiertas para que el entrevistado responda.
+> - Las **preguntas cerradas** ofrecen un número limitado de opciones para responder.
 >
 >Con base a este tipo de preguntas se pueden formular distintas ***estructuras de entrevistas***, de las cuales podemos destacar:
 >- **Estructura de Pirámide**: En las cuales se comienza la entrevista realizando preguntas específicas, generalmente mediante el uso de preguntas cerradas, y se finaliza con preguntas más generales, por lo general abiertas.
@@ -46,7 +46,7 @@ La adquisición de los requerimientos del cliente puede darse mediante distintos
 
 - **Encuestas**: Es una técnica de recopilación de información que consiste en un conjunto de preguntas u otros tipos de indicaciones con el objetivo de recopilar información de un encuestado. Esta técnica nos brinda algunas ventajas y desventajas por sobre las demás, como por ejemplo, el poder utilizarlo para muestras grandes, la posibilidad de usar preguntas abiertas y cerradas con el veneficio que estas últimas van a poder ser cuantificadas, ya sea utilizando una escala nominal o de intervalo. Como contraparte tiene que, al igual que las entrevistas, el desarrollar un cuestionario útil lleva tiempo de planeación.
 
->[!note] Sugerencias a la Hora de Crear un Cuestionario
+>[!note] Sugerencias a la Hora de Crear un Cuestionario / Entrevista
 >Se debe definir claramente cuáles son los objetivos, debe tener consistencia en el estilo, además se debe mantener un orden entre las preguntas; priorizando las preguntas más importantes para el encuestado o en caso particulares introducir primero las preguntas menos controversiales, se recomienda también agrupar conceptos de contenido similar.
 
 - **JAD (Diseño de Aplicación Conjunta)**: Consiste en realizar una juntada del personal de las distintas áreas, con el fin de establecer los requerimientos de forma conjunta, evitando que esta tarea sea realizada siempre por las mismas personas.
