--- a/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
+++ b/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
@@ -86,7 +86,7 @@ Más recientemente surge el concepto de sistemas distribuidos, estos son un conj
 
 #### Estructuras Monolíticas
 
-Están constituidos por un solo programa, compuesto a su vez por módulos entrelazados entre si, de manera que cada módulo puede llamar a otros.
+Están constituidos por un solo programa, compuesto a su vez por módulos entrelazados entre sí, de manera que cada módulo puede llamar a otros.
 
 - Este tipo de programas carecen de protección y privilegio a la hora de entrar en rutina.
 - Carecen de flexibilidad para soportar diferentes ambientes.
@@ -98,13 +98,15 @@ Se dividió el sistema operativo en pequeñas partes, de tal forma que cada una 
 >[!note] Protección de CPU
 >Los tiempos que se le asignan a cada tarea cumplen la función de cuidar que el procesador no ejecute siempre los procesos de las aplicaciones de mas prioridad, a su vez para que esto sea posible todas las tareas deben ser capas de terminarse y/o  interrumpirse para que esta no se apropie de todos los recursos.
 
+---
+
 #### Máquinas Virtuales
 
 El objetivo de las máquinas virtuales es el de integrar distintos SO, en una sola máquina, dando la sensación de ser máquinas diferentes. Estas máquinas virtuales son simulaciones del hardware, con su modo núcleo/usuario, E/S, interrupciones, etc.
 Existen dos tipos de máquinas virtuales:
 
 - **Máquinas virtuales por proceso**: en una computadora con un SO ya preinstalado, se descarga la ISO del SO deseado, se descarga un virtualizador y se configura los recursos que va a utilizar la máquina virtual.
-- **Máquinas virtuales de sistema**: Consiste en un SO especial que solo se encarga de atender a las distintas máquinas virtuales que se monten sobre él. Para el SO que manejan esas virtualizaciones las máquinas virtuales que se creen son solo archivos que van a tener que ser manejados.
+- **Máquinas virtuales de sistema**: Consiste en un SO especial que solo se encarga de atender a las distintas máquinas virtuales que se monten sobre él. Para el SO que manejan esas virtualizaciones, las máquinas virtuales que se creen son solo archivos que van a tener que ser manejados.
 
 >[!note] Ventajas y Desventajas
 >- Ventajas:
@@ -129,10 +131,9 @@ El procesador tiene más de un proceso para ejecutar. La secuencia de ejecución
 seleccionará otro proceso y lo ejecutará. Cuando el primer proceso termine su espera,
 obtendrá el procesador nuevamente. Siempre se ejecuta un proceso por procesador.
 
-
 #### Tiempo Compartido
 
-Utiliza ****calendarización de CPU y multiprogramación**** para proporcionar a cada usuario una pequeña porción de tiempo (quántum), dándoles la impresión de que cada uno de ellos tiene el control absoluto de la computadora, mientras que en realidad es compartida entre muchos usuarios.
+Utiliza ***calendarización de CPU y multiprogramación*** para proporcionar a cada usuario una pequeña porción de tiempo (quántum), dándoles la impresión de que cada uno de ellos tiene el control absoluto de la computadora, mientras que en realidad es compartida entre muchos usuarios.
 
 >[!important] El Quantum
 >En un Sistema Operativo de ***tiempo compartido***, el procesador cada vez que comienza a ejecutar una tarea  inicializa un cronometro de 10mseg a esto se le denomina ***quantum***, si una tarea demora mas de ese tiempo se interrumpe y pasa a la siguiente, asi sucesivamente.
@@ -225,3 +226,29 @@ Estas llamadas se puede agrupar en:
 A forma de resumen le dejaremos este cuadro 
 
 <span class="centerImg"> ![[SO-interrupciones.png]] </span>
+
+---
+
+# Núcleos del SO
+
+Corresponde al primer nivel jerárquico. Suele permanecer en el almacenamiento primario o memoria principal, ya que su código se ejecuta frecuentemente, posee un conjunto de rutinas cuya misión es la de administrar en forma eficiente los recursos, así como también los procesos (creación, suspensión, etc.).
+
+- Es la parte más dependiente del hardware de todo el S.O.
+- Parte de su desarrollo está en Assembly.
+- Algunas veces están incluidos con dispositivos cableados (sistemas embebidos).
+- Elimina funciones del monitor y las tareas pasan a ser procesos del sistema.
+- Los procesos son interrumpibles y todas las interrupciones son manejadas por un núcleo mínimo transparente a los procesos.
+- Es utilizado en sistemas grandes.
+- Debe ser seguro, ya que de esta manera todo el S.O. es seguro.
+- Proporcionar estado adecuado para la existencia de procesos.
+- Maneja las interrupciones.
+- Facilita la conmutación del procesador entre los distintos procesos.
+- Provee mecanismos básicos de comunicación entre procesos.
+- Es el encargado de la carga inicial y activación de la configuración del sistema.
+
+## Categorías
+
+- ***Núcleos Monolíticos***: Generalmente se dividen por:
+	1. **Dependientes del hardware**: manejo de las IRQ (interrupciones de hardware), memoria, dispositivos E/S.
+	2. **Independientes del hardware**: se encarga de las llamadas al sistema, manejo de archivos y planificación de procesos.
+- ***MicroKernel o Micronúcleo***: Se encarga solamente del manejo de procesos e hilos, memoria, comunicaciones y operaciones bajo nivel de E/S. El resto de los servicios, como manejo de archivos, utilizan al núcleo por medio de las comunicaciones o llamadas al sistema.
