--- a/Sistemas Operativos/Unidad 1/2. Información mas Amplia.md
+++ b/Sistemas Operativos/Unidad 1/2. Información mas Amplia.md
@@ -58,8 +58,8 @@ Para que el sistema informático sea cómodo para los usuarios, el SO proporcion
 ### Protección y seguridad
 
 Si un sistema informático tiene múltiples usuarios y permite la ejecución concurrente de múltiples procesos, entonces el acceso a los datos debe regularse. Se emplean mecanismos que aseguren que solo puedan utilizar los recursos aquellos procesos que hayan obtenido la apropiada autorización del SO.
-La **protección** es cualquier mecanismo que controle el acceso de procesos y usuarios a los recursos definidos por un sistema informático. Este mecanismo debe proporcionar los medios para la especificación de los controles que hay que imponer y para la aplicación de dichos controles. La protección puede mejorar la fiabilidad, permitiendo detectar errores latentes en las interfaces entre los subsistemas componentes. La detección temprana de errores de interfaz a menudo puede evitar la contaminación de un subsistema que funciona perfectamente por parte de otro subsistema que funcione mal.
-Un sistema puede tener la protección adecuada pero estar expuesto a fallos y permitir accesos inapropiados. Considere un usuario al que le han robado su información de autenticación (con los que ingresa al sistema); sus datos podrían ser copiados o borrados, incluso aunque este funcionando la protección de archivos y memoria. Es responsabilidad de los mecanismos de **seguridad** defender al sistema frente a ataques internos y externos. Tales ataques abarcan un enorme rango, desde virus y gusanos, los ataques de denegación de servicio, robo de identidad y robo de servicio. La prevención de algunos de estos ataques se considera una función del SO en algunos sistemas, mientras que otros se encarga un software adicional.
+La ***protección*** es cualquier mecanismo que controle el acceso de procesos y usuarios a los recursos definidos por un sistema informático. Este mecanismo debe proporcionar los medios para la especificación de los controles que hay que imponer y para la aplicación de dichos controles. La protección puede mejorar la fiabilidad, permitiendo detectar errores latentes en las interfaces entre los subsistemas componentes. La detección temprana de errores de interfaz a menudo puede evitar la contaminación de un subsistema que funciona perfectamente por parte de otro subsistema que funcione mal.
+Un sistema puede tener la protección adecuada pero estar expuesto a fallos y permitir accesos inapropiados. Considere un usuario al que le han robado su información de autenticación (con los que ingresa al sistema); sus datos podrían ser copiados o borrados, incluso aunque este funcionando la protección de archivos y memoria. Es responsabilidad de los mecanismos de ***seguridad*** defender al sistema frente a ataques internos y externos. Tales ataques abarcan un enorme rango, desde virus y gusanos, los ataques de denegación de servicio, robo de identidad y robo de servicio. La prevención de algunos de estos ataques se considera una función del SO en algunos sistemas, mientras que otros se encarga un software adicional.
 
 >[!note] Como se Proteje el Sistema Operativo
 >La protección y la seguridad requieren que el sistema pueda distinguir a todos sus usuarios. Los SO (en su mayoría) mantienen una lista de los nombres de usuario y sus **identificadores de usuario** (ID) asociados.
