--- a/Lenguajes de Programación/Unidad 2/2. Semántica.md
+++ b/Lenguajes de Programación/Unidad 2/2. Semántica.md
@@ -16,14 +16,14 @@ las construcciones de un Lenguaje de programación, teniendo una gran importanci
 	- " invalid request. \n " -> es una expresión de tipo array de caracteres.
 
 >[!note] Nota de Clase
->Se debe conocer el orden el el cual se van a ejecutar las expreciones, al mismo tiempo tener unas reglas claras a la hora de la implementación asi todos los compiladores obtienen el mismo resultado.
+>Se debe conocer el orden en el cual se van a ejecutar las expreciones, al mismo tiempo tener unas reglas claras a la hora de la implementación asi todos los compiladores obtienen el mismo resultado.
 
 ## Tipos de Semánticas Formales
 
 Al contrario que las normas sintácticas que se pueden describir a través de la notación BNF, para la semántica no existe un estándar o única forma de describirlo, por lo que contamos con varias formas de hacerlo, entre ellas:
 
 - **Semántica Estática**: Hay características de los lenguajes de programación que no pueden ser descritas mediante notaciones libres de contexto (BNF o EBNF), pero que se pueden resolver en tiempo de compilación. Está mucho más relacionado con las formas y estructuras válidas permitidas, o en el chequeo de tipos. Para describir este tipo de semántica se utiliza una notación de ***Gramática de Atributos***.
-- **Semántica Dinámica**: Describe el significado de las expresiones, sentencias y de las unidades del programa en tiempo de ejecución. Para describir este tipo de semántica se pueden utilizar diferentes notaciones, entre ellas: la ***Operacional,*** la que resulta útil para los implementadores, ***Axiomática*** que está más orientada a los programadores y ***Denotacional*** es utilizada por el diseñador para descubrir ambigüedades en las sentencias del lenguaje que esta diseñando.
+- **Semántica Dinámica**: Describe el significado de las expresiones, sentencias y de las unidades del programa en tiempo de ejecución. Para describir este tipo de semántica se pueden utilizar diferentes notaciones, entre ellas: la ***Operacional,*** la que resulta útil para los implementadores, ***Axiomática*** que está más orientada a los programadores y ***Denotacional***, la cual es utilizada por el diseñador para descubrir ambigüedades en las sentencias del lenguaje que esta diseñando.
 
 ## Semántica Estática
 
