Se agrego los temas de Diseño gráfico y se termino SO

--- a/Autómatas y Lenguajes Formales/Unidad 2/1. Máquinas.md
+++ b/Autómatas y Lenguajes Formales/Unidad 2/1. Máquinas.md
@@ -16,6 +16,9 @@ Estas máquinas se pueden representar mediante diagramas de estados. Los cuales 
 - **Los estados se representan como círculos**.
 - **Las transiciones como líneas orientadas**: Conectan estados y representan los eventos de entrada.
 
+>[!important] Máquinas Secuenciales
+>Las máquinas secuenciales precedieron históricamente a los autómatas finitos. Mientras estos se dirigen principalmente al reconocimiento de lenguajes, las máquinas secuencias encuentran su aplicación principal en el diseño de circuitos electrónicos. Esencialmente, una máquina secuencia es un autómata finito determinista, sin estados finales, que le sirven al autómata para aceptar las palabras del lenguaje que reconoce. En su lugar, como los circuitos electrónicos que representa, tiene la capacidad de generar símbolos de salida, que, como los símbolos de entrada, pertenecerán a un alfabeto determinado, el alfabeto de salida, que no tiene por qué ser el mismo que el de entrada.
+
 Si un sistema puede describirse mediante un diagrama de estados o a través de las ***matrices de transiciones,*** se dice que el ***sistema es secuencial***. En un sistema secuencial las salidas dependen de las entradas presentes y de los valores de las entradas anteriores. Existen dos tipos de máquinas secuenciales:
 
 - **Máquina de Mealy**: Los valores de salida van a depender de los valores de entrada y del estado en el que se encuentre en ese momento.
