--- a/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
+++ b/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
@@ -14,6 +14,10 @@ En los modelos de sistemas discretos, los estados y las transiciones deben estar
 
 Características
 
+>[!important] El determinismo en los Autómatas Finitos
+>Un autómata finito puede ser determinista si, para cada estado y cada símbolo de entrada, existe una transición única a otro estado. Es decir, dado un estado y un símbolo de entrada, el autómata determinista siempre sabe exactamente a qué estado debe moverse a continuación, sin necesidad de tomar decisiones o elegir entre varias opciones.
+>Esta característica de un ***autómata finito determinista*** lo hace más fácil de implementar y analizar, ya que su comportamiento está completamente determinado por su estructura y función de transición.
+
 - Solo se puede estar en un único estado luego de leer una entrada.
 - Para cada entrada solo existe uno y solo un estado al que el autómata puede hacer la transición a partir del estado actual (determinismo).
 - Presentan estados “saturados”, que sea saturado, significa que para cada estado, debe existir una transición para cada símbolo del alfabeto que procesa.
@@ -73,6 +77,9 @@ A partir de la función de transición de un AFD compuesta de la siguiente maner
 
 <span class="centerImg"> ![[ALF-definicion-recursiva.png]] </span>
 
+>[!important] Sobre la Función de Transición Extendida
+>La extensión de la función de transición se refiere a la posibilidad de extender esta función de transición a cadenas de símbolos del alfabeto de entrada, de tal forma que se pueda obtener el estado final en el que debería estar el autómata después de haber procesado completamente dicha cadena. Esta función extendida se llama ***función de transición extendida o función de transición de cadena*** (o sobre palabras).
+
 Mediante esta dado un determinado automata podemos demostrar que una palabra es admitida, es válida para ese lenguaje o no, veremos en el siguiente ejemplo si el siguiente autómata acepta la palabra *x=110101*.
 
 <span class="centerImg">![[ALF-demostracion-formal.png]]  </span>
@@ -95,6 +102,11 @@ Entonces, dados dos autómatas ***A(Q, Σ, δ, q0 , F) y A´(Q´, Σ´, δ´, q0
 
 #### Minimización de AFD
 
+Los algoritmos que simulan o implementan automatas finitos deterministas suelen requerir un espacio más o menos proporcional al número de estados del autómata, por lo que interesa que el número de dichos estados sea el menor posible. En un autómata puede haber dos tipos de estados *innecesarios*, que es posible eliminar o combinar para minimizar el número de estados. Por esta razón, existen dos operaciones de minimización diferentes:
+
+- ***Eliminación de estados inaccesibles***: Un estado es inaccesible si no se puede alcanzar desde el estado inicial del AFD siguiendo cualquier combinación de transiciones de entrada. Estos estados no son necesarios para el funcionamiento del AFD y pueden ser eliminados sin afectar su comportamiento.
+- **Agrupación de estados equivalentes o indistinguibles**: Dos estados son equivalentes si tienen el mismo comportamiento desde la perspectiva de cualquier cadena de entrada. Es decir, si tienen las mismas transiciones de entrada y salida y llegan a estados finales o no finales de manera similar. La agrupación de estados equivalentes en un único estado reduce el número total de estados del AFD.
+
 Un autómata es una ***simplificación*** de otro si tiene menos estados, pero ambos aceptan el mismo lenguaje. Esto se sabe mediante conocer que dos estados de ese autómata son equivalentes, una vez que sabemos eso podemos eliminar uno de ellos y las "flechas" que salen son eliminadas y las que entran se dirigen al estado equivalente.
 Existen dos métodos de simplificación:
 
@@ -114,5 +126,3 @@ Existen dos métodos de simplificación:
 
 >[!note] Mas Ejemplos
 >Todos los ejemplos gráficos estan en las notas de las clases o en la filminas
-
-
