--- a/Sistemas Operativos/Unidad 2/1. Procesos.md
+++ b/Sistemas Operativos/Unidad 2/1. Procesos.md
@@ -1,6 +1,5 @@
-
 Un proceso es en esencia un ***programa en ejecución***. Cada proceso tiene asociado un espacio de direcciones, una lista de ubicaciones de memoria que va desde algún mínimo (generalmente 0, por lo general se habla de direcciones logicas) hasta cierto valor máximo, donde el proceso puede leer y escribir información. El espacio de direcciones contiene el programa ejecutable, los datos del programa y su pila. También hay asociado a cada proceso un conjunto de recursos, que comúnmente incluye registros (el contador de programa y el apuntador de pila, entre ellos) y toda la demás información necesaria para ejecutar el programa.
-Cada cierto tiempo, el sistema operativo decide detener la ejecución de un proceso y empezar a ejecutar otro; debido a que el primero ha utilizado más tiempo del que le correspondía de la CPU en el último segundo, o otros tipos de situaciones.
+Cada cierto tiempo, el sistema operativo decide detener la ejecución de un proceso y empezar a ejecutar otro; debido a que el primero ha utilizado más tiempo del que le correspondía de la CPU en el último segundo, u otros tipos de situaciones.
 Cuando un proceso se ***suspende en forma temporal***, todos estos apuntadores deben guardarse de manera que una llamada a *read* que se ejecute después de reiniciar el proceso lea los datos apropiados. En muchos sistemas operativos, toda la información acerca de cada proceso (además del contenido de su propio espacio de direcciones) se almacena en una tabla del sistema operativo, conocida como la ***tabla de procesos***, la cual es un arreglo (o lista enlazada) de estructuras, una para cada proceso que se encuentre actualmente en existencia.
 De esta forma, un proceso (suspendido) consiste en su espacio de direcciones, que se conoce comúnmente como imagen de núcleo y su entrada en la tabla de procesos, que guarda el contenido de sus registros y muchos otros elementos necesarios para reiniciar el proceso más adelante.
 
@@ -10,12 +9,17 @@ De esta forma, un proceso (suspendido) consiste en su espacio de direcciones, qu
 ## El Modelo de Procesos
 
 En este modelo, todo el software ejecutable en la computadora, que algunas veces incluye al sistema operativo, se organiza en varios ***procesos secuenciales***. Un proceso no es más que una instancia de un programa en ejecución, incluyendo los valores actuales del contador de programa, los registros y las variables. En concepto, cada proceso tiene su propia CPU virtual; en la realidad, la CPU real conmuta de un proceso a otro.
-Cada proceso cuenta con su propio flujo de control (es decir, su propio contador de programa lógico) y se ejecután de forma independiente. Desde luego que sólo hay un contador de programa físico, por lo que cuando se ejecuta cada proceso, se carga su contador de programa lógico en el contador de programa real. Cuando termina (por el tiempo que tenga asignado), el contador de programa físico se guarda en el contador de programa lógico almacenado, del proceso en memoria.
+Cada proceso cuenta con su propio flujo de control (es decir, su propio contador de programa lógico) y se ejecutan de forma independiente. Desde luego que sólo hay un contador de programa físico, por lo que cuando se ejecuta cada proceso, se carga su contador de programa lógico en el contador de programa real. Cuando termina (por el tiempo que tenga asignado), el contador de programa físico se guarda en el contador de programa lógico almacenado, del proceso en memoria.
 
 <span class="centerImg"> ![[SO-procesos.png]] </span>
 
 >[!important] Diferencia entre Programa y Proceso
-> La diferencia entre un proceso y un programa es sutil pero crucial. Un ***programa*** la unidad que cuenta con todos los pasos que se deben realizar para que se ejecute de forma correcta. Mientras que  el ***proceso*** es llevar a cabo todas estas instrucciones e irlas ejecutando una a una.
+> La diferencia entre un proceso y un programa es sutil pero crucial. Un ***programa*** la unidad pasiva que cuenta con todos los pasos que se deben realizar para que se ejecute de forma correcta. Mientras que el ***proceso*** es una unidad activa que se encargara de ir ejecutando las sentencias una a una.
 > La idea clave es que un proceso es una actividad de cierto tipo: tiene un programa, una entrada, una salida y un estado. Varios procesos pueden compartir un solo procesador mediante el uso de un algoritmo de planificación para determinar cuándo se debe detener el trabajo en un proceso para dar servicio a otro.
-> - Vale la pena recalcar que si un programa se está ejecutando por duplicado cuenta como dos procesos. El hecho de que dos procesos en ejecución tengan el mismo programa no importa; son procesos distintos. El sistema operativo es capaz de compartir el código entre ellos de manera que sólo haya una copia en la memoria.
+> - Vale la pena recalcar que si un programa se está ejecutando por duplicado cuenta como dos procesos. El hecho de que dos procesos en ejecución tengan el mismo programa no importa; son procesos distintos. El sistema operativo es capaz de compartir el código entre ellos de manera que solo haya una copia en la memoria.
+>
+> Para que una unidad pasiva se convierta en una unidad activa, se le tiene que agregar información adicional, como por ejemplo, el PC (program counter), la orientación, su prioridad, entre otras cosas, y una vez que este se carga en memoria podemos decir que paso a ser una unidad activa.
+> Pero el SO para hacer todo eso primero debe fijarse como gestiona la memoria, si es mediante ***paginación*** o por ***segmentación***, si el SO funciona mediante paginación se va a trozar el programa en *N* páginas del mismo tamaño. Por otro lado, sí funciona mediante segmentación, se va a dividir el programa en rutinas, las cuales pueden variar su tamaño de una a otras.
+> Esto es importante saberlo, ya que dependiendo de cuál de los dos modelos tome, el procesador va a cargar diferentes páginas o segmentos cuando se realice la ejecución de las instrucciones.
+
 
