--- a/Créditos/Taller de Investigación/1. Introducción.md
+++ b/Créditos/Taller de Investigación/1. Introducción.md
@@ -7,7 +7,7 @@ El proceso generalmente comienza por detectar un tópico del cual se puede inves
 
 ## Sistemas de Proyectos de la UNER
 
-- **PID**: Cuentan con un director (interno a la facultad o externo), codirector (puede estar presente o no), integrantes (docentes o alumnos), una duración (el más largo puede ser de 3 años) y colaboradores (graduados u otras personas idóneas pero sin relación con la facultad).
+- **PID**: Cuentan con un director (interno a la facultad o externo, categorizado 1 o 2), codirector (puede estar presente o no), integrantes (docentes o alumnos), una duración (el más largo puede ser de 3 años) y colaboradores (graduados u otras personas idóneas pero sin relación con la facultad).
 - **PID Novel**: Está pensado para docentes que inician sus actividades en la investigación, cuentan con las mismas partes que el ***PID*** con la única diferencia que en estos proyectos de investigación se cuenta con asesores y no acepta colaboradores.
 - **PDTS**: No son en sí integrantes del proyecto, pero en determinadas facultades se pueden realizar.
 
